Final working VMTranslator!